k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp-deploy
  labels:
    env: dev
  annotations:
    kubernetes.io/change-cause: This is updated version of my app
spec:
  replicas: 2
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      containers:
      - name:  myapp-container
        image:  nginx
