k8s/environmentVariableInPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
    env: dev
spec:
  containers:
  - name: myapp
    image: nginx
