k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app2
  labels:
    app: app2
spec:
  containers:
  - name: myapp
    image: nginx
  # - name: myapp2
  #   image: busybox
  #   command: ["sleep", "3600"]
