k8s/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    app: app2
  type: ClusterIP
  ports:
  - port: 90
    targetPort: 80
