k8s/nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30000
