k8s/pathBasedIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: svc1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: svc2
            port:
              number: 90
